fixed overflowed x scrollbar removed y scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,10 @@
   }
 }
 
+::-webkit-scrollbar{
+  width: 0px;
+}
+
 body {
   color: var(--foreground);
   background: var(--background);
